<resources>
    <string name="app_name">InterFatecs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Logo</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sobre_o_app">Sobre o App</string>
    <string name="menu_home">Home</string>
    <string name="menu_edicao_atual">Edição Atual</string>
    <string name="menu_preparacao">Como se preparar</string>
    <string name="menu_sobre">Sobre o evento</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_edicoes_anteriores">Edições Anteriores</string>
    <string name="menu_formato_e_regras">Formato e Regras</string>
    <string name="menu_como_chegar">Como chegar</string>
    <string name="status_inscricoes_abertas">Inscrições abertas</string>
    <string name="status_primeira_fase">Primeira Fase</string>
    <string name="status_primeira_fase_ocorrendo">Primeira Fase Ocorrendo</string>
    <string name="status_segunda_fase">Segunda Fase</string>
    <string name="status_segunda_fase_ocorrendo">Segunda Fase Ocorrendo</string>
    <string name="status_encerrada">Edição Encerrada</string>
    <string name="txt_remaining_time">Dias restantes: </string>
    <string name="btn_inscrever">Inscrever equipe</string>
    <string name="btn_login">Login</string>
    <string name="btn_verEquipe">Ver Equipe</string>
    <string name="pref_status">pref_status</string>
    <string name="pref_remaining_time">pref_remaining_time</string>
    <string name="pref_logged">pref_logged</string>
    <string name="title_formato_e_regras">Formato e Regras</string>
    <string name="title_equipes">Composição das Equipes e Critérios de Elegibilidades</string>
    <string name="title_prova">Prova e Duração</string>
    <string name="title_linguagens">Linguagens Permitidas</string>
    <string name="title_classificacao">Critérios de Avaliação e Classificação</string>
    <string name="txt_formato_e_regras">
        O evento é inspirado na Maratona de Programação promovida anualmente pela Sociedade Brasileira
        de Computação (SBC) como etapa seletiva do ACM-ICPC, competição mundial de projeto e implementação
        de algoritmos computacionais.
        Considerando a grande quantidade de cursos de graduação na área de Informática mantidos pelo
        Centro Paula Souza, o elevado número de estudantes neles matriculado e a dispersão geográfica
        das Fatecs pelo território paulista, a Maratona InterFatecs é organizada em duas etapas, buscando
        viabilizar a participação do maior número de competidores em suas provas. Em ambas etapas será
        utilizado o ambiente de gerenciamento de competição denominado BOCA, que é tradicionalmente
        empregado em competições do tipo no Brasil.

        A primeira etapa é realizada de forma distribuída, com as equipes espalhadas por diversas sedes,
        todas realizando a mesma prova, ao mesmo tempo. Para facilitar a organização, um único servidor
        é configurado em uma sede central à qual todas as sedes acessam via internet e onde os juízes da
        competição julgam as submissões e atendem às dúvidas dos participantes.

        A segunda etapa é realizada em uma sede única, com a presença das equipes melhores classificadas
        na etapa anterior. Nessa sede, é disponibilizado o servidor com o ambiente interativo de submissão
        de programas e o corpo de juízes, reproduzindo inteiramente o ambiente de uma sede regional da
        Maratona de Programação da SBC.
    </string>
    <string name="txt_equipes">
        A competição é disputada por equipes de três alunos titulares mais um reserva. O papel do competidor
        reserva é o de substituir um titular que eventualmente se veja impedido de participar de alguma etapa
        do evento. A equipe deve manter sua formação, quanto aos seus membros titulares e reserva,
        nas duas etapas da competição, sob pena de desqualificação sumária.

        Os membros de uma equipe precisam ser alunos regularmente matriculados nos cursos de graduação
        tecnológica mantidos pelo Centro Paula Souza no semestre letivo em que ocorrer a primeira fase da
        competição. É obrigatório que todos os membros de um time sejam da mesma Fatec, mas não é necessário
        que pertençam ao mesmo curso, período letivo ou turno de aulas. A qualquer momento pode ser solicitado
        ao competidor a comprovação da situação de sua matrícula no curso de graduação ao qual pertence.
    </string>
    <string name="txt_prova">
        A prova correspondente a cada etapa possui uma duração de 5 horas e é composta por um número variável
        de problemas redigidos em português - e ao menos um problema em inglês - que devem ser resolvidos
        mediante implementação de programas de computador. Durante a prova, é permitida às equipes a consulta
        a material próprio, que pode ser impresso em papel ou disponível em meio magnético na primeira fase e
        exclusivamente impresso em papel na segunda fase. NÃO é permitido a acesso a conteúdos da Internet em
        nenhuma das duas fases.
        É vedada a comunicação entre as equipes durante a prova de ambas as fases, bem como a troca de material
        de consulta entre elas. Também não é permitida a comunicação entre os membros das equipes e seus
        respectivos técnicos durante a realização da prova. Cada equipe terá acesso a um único computador
        dotado do ambiente de submissão de programas BOCA, dos compiladores, link-editores e IDEs requeridos
        pelas linguagens de programação permitidas bem como editores de programa.

        Na primeira fase, a equipe terá acesso ao enunciado dos problemas em versão eletrônica no próprio
        ambiente BOCA, ficando a critério da organização da sede local a decisão pelo oferecimento também da
        versão impressa em papel desses enunciados. Na segunda etapa cada membro da equipe recebe uma cópia
        impressa em papel com os enunciados dos problemas.
    </string>
    <string name="txt_linguagens">
        São permitidas soluções para os problemas implementadas nas linguagens C, C++ e Java.
        As versões dos compiladores utilizados pelos juízes para corrigir as soluções submetidas
        pelas equipes são divulgadas por meio de nota técnica publicada no site do evento a no mínimo
        10 dias da realização de cada etapa.
    </string>
    <string name="txt_classificacao">
        A avaliação de uma solução submetida pela equipe de competidores leva em conta diversas
        possibilidades de erro: de compilação, em tempo de execução, demora excessiva do programa
        em processar os casos de teste, resposta incorreta e erro de formatação de saída, sendo
        estas duas últimas detectada por meio da comparação byte a byte da solução da equipe com
        o gabarito dos juízes. Uma submissão que não apresente erros de qualquer natureza é julgada
        como correta.

        O primeiro critério de classificação é a quantidade de problemas resolvidos, em ordem
        decrescente, ou seja, é vencedor a equipe que resolver o maior número de problemas durante
        as cinco horas de prova. O desempate das equipes que resolverem a mesma quantidade de problemas
        é feito pelo tempo total que cada uma precisou para resolver os problemas, em ordem crescente
        desse valor. Esse total é computado em minutos e corresponde à soma do tempo decorrido a partir
        do início da prova em que a primeira submissão correta de cada problema foi feita pela equipe.

        Submissões incorretas de problemas que acabaram sendo resolvidos pela equipe acrescentam 20
        minutos cada uma ao seu tempo total.

        Os 50 times melhores classificados na primeira etapa da competição estão selecionados para
        participar da segunda etapa, com as seguintes restrições:

        1- Toda Fatec participante terá garantida uma vaga na etapa final. Essa vaga será atribuída
        automaticamente à equipe melhor classificada na primeira etapa. Caso haja empate entre equipes
        de uma mesma Fatec na disputa por uma vaga, caberá ao técnico daquela unidade designar o vencedor.

        2- As demais vagas remanescentes serão preenchidas segundo o desempenho geral dos times.

        Caso a quantidade de equipes habilitadas à segunda fase pelos critérios 1) e 2) seja inferior
        a 50, estará caracterizada a sobra de vagas e a decisão sobre a forma de preenchimento das mesmas
        é de responsabilidade da comissão organizadora do evento, segundo os critérios que julgar conveniente.
    </string>
    <string name="about">
        Este aplicativo foi desenvolvido com o intuito de ser utilizado durante a ocorrência de uma edição
        da Maratona de Programação Interfatecs.\n
        O aplicativo pode ser usado pelos participantes para acompanhar os resultados e ver informações
        gerais sobre a competição.\n\n
        Como se trata de uma versão beta do aplicativo não foram implementados completamente o ciclo de
        status da competição, demonstrado na tela Home, e nem a tela de login, devido a falta de um servidor
        existente para qual pudessem ser extraídas essas informações. Portanto para demonstração de uso do ciclo
        de status foi inserido na aba de configurações dois controles que permitem mudar manualmente esse status,
        e para a tela de login qualquer usuário e senha são válidos.\n\n
        Estará disponível numa futura versão uma aba para visualização de dados estatísticos da competição.
    </string>
    <string name="desenvolvedor">
        DADOS DO DESENVOLVEDOR\n
        Nome: Eric Monteiro Galotti de Souza\n
        RA: 2840481811010
    </string>
    <string name="setting_deslogar">Deslogar</string>
    <string name="setting_status">Alterar Status da Competição</string>
    <string name="setting_tempo">Alterar tempo restante</string>
    <string name="intent_code_result">result</string>
</resources>