<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            style="@style/textTitle"
            android:text="@string/title_formato_e_regras" />
        <TextView
            style="@style/smallText"
            android:text="@string/txt_formato_e_regras" />
        <TextView
            style="@style/textTitle"
            android:text="@string/title_equipes" />
        <TextView
            style="@style/smallText"
            android:text="@string/txt_equipes" />
        <TextView
            style="@style/textTitle"
            android:text="@string/title_prova" />
        <TextView
            style="@style/smallText"
            android:text="@string/txt_prova" />
        <TextView
            style="@style/textTitle"
            android:text="@string/title_linguagens" />
        <TextView
            style="@style/smallText"
            android:text="@string/txt_linguagens" />
        <TextView
            style="@style/textTitle"
            android:text="@string/title_classificacao" />
        <TextView
            style="@style/smallText"
            android:text="@string/txt_classificacao" />
    </LinearLayout>

</ScrollView>