<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_edicao_atual"
            android:icon="@drawable/ic_menu_edicao_atual"
            android:title="@string/menu_edicao_atual" />
        <item
            android:id="@+id/nav_preparacao"
            android:icon="@drawable/ic_menu_preparacao"
            android:title="@string/menu_preparacao" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_estatisticas"
            android:icon="@drawable/ic_menu_estatisticas"
            android:title="@string/menu_estatisticas" />
        <item
            android:id="@+id/nav_edicoes_anteriores"
            android:icon="@drawable/ic_menu_edicoes_anteriores"
            android:title="@string/menu_edicoes_anteriores" />

        <item
            android:id="@+id/nav_formato_e_regras"
            android:title="@string/menu_formato_e_regras" />
    </group>

</menu>
